--- a/PyTK/packages.config
+++ b/PyTK/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetZip" version="1.11.0" targetFramework="net45" />
   <package id="MoonSharp" version="2.0.0.0" targetFramework="net45" />
+  <package id="ncalc" version="1.3.8" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Pathoschild.Stardew.ModBuildConfig" version="2.1.0-beta-20180428" targetFramework="net45" />
 </packages>
