--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -139,6 +139,7 @@
     <None Include="Examples.md" />
     <None Include="manifest.json" />
     <None Include="packages.config" />
+    <None Include="PyTK.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Harmony\Harmony\Harmony.csproj">
@@ -148,6 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\nuget-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
