--- a/CustomFarmingRedux/CustomFarmingRedux.csproj
+++ b/CustomFarmingRedux/CustomFarmingRedux.csproj
@@ -55,76 +55,41 @@
     <Compile Include="WaterItem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PyTK\PyTK.csproj">
-      <Project>{a8e6272f-a6a1-4bfe-ba8f-021f63596987}</Project>
-      <Name>PyTK</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Format.md" />
-    <None Include="Machines\Platonymous.Dresser\Dresser.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Machines\Platonymous.Drawer\drawer.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Machines\Platonymous.Examples\Examples.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Machines\Platonymous.Mailbox\ComputerMailbox.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Machines\Platonymous.Mystical\TimeSphere.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Machines\Platonymous.NewMachines\NewMachines.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Machines\Platonymous.Dresser\Dresser.json" />
+    <None Include="Machines\Platonymous.Drawer\drawer.json" />
+    <None Include="Machines\Platonymous.Examples\Examples.json" />
+    <None Include="Machines\Platonymous.Mailbox\ComputerMailbox.json" />
+    <None Include="Machines\Platonymous.Mystical\TimeSphere.json" />
+    <None Include="Machines\Platonymous.NewMachines\NewMachines.json" />
     <None Include="manifest.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Machines\Platonymous.Drawer\drawer.png">
+    <Content Include="Machines\Platonymous.Drawer\drawer.png" />
+    <Content Include="Machines\Platonymous.Dresser\dresser.png" />
+    <Content Include="Machines\Platonymous.Examples\lemonade.png" />
+    <Content Include="Machines\Platonymous.Examples\machines.png" />
+    <Content Include="Machines\Platonymous.Examples\MoreMachines.png" />
+    <Content Include="Machines\Platonymous.Examples\MoreProduce.png" />
+    <Content Include="Machines\Platonymous.Examples\producetilesheet.png" />
+    <Content Include="Machines\Platonymous.Mailbox\mailbox.png" />
+    <Content Include="Machines\Platonymous.Mystical\mystical.png" />
+    <Content Include="Machines\Platonymous.NewMachines\newmachines.png" />
+    <Content Include="Machines\Platonymous.NewMachines\newmachines2.png" />
+    <Content Include="Machines\Platonymous.NewMachines\newproduce.png" />
+    <Content Include="Machines\Platonymous.NewMachines\preview.png" />
+    <Content Include="Machines\non-cp-packs-go-here.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Machines\Platonymous.Dresser\dresser.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Examples\lemonade.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Examples\machines.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Examples\MoreMachines.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Examples\MoreProduce.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Examples\producetilesheet.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Mailbox\mailbox.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.Mystical\mystical.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.NewMachines\newmachines.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.NewMachines\newmachines2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.NewMachines\newproduce.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Machines\Platonymous.NewMachines\preview.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PyTK\PyTK.csproj">
+      <Project>{a8e6272f-a6a1-4bfe-ba8f-021f63596987}</Project>
+      <Name>PyTK</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\common.targets" />
