--- a/PyTK/manifest.json
+++ b/PyTK/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "PyTK",
   "Author": "Platonymous",
-  "Version": "1.4.11-beta",
+  "Version": "1.4.18",
   "Description": "Platonymous Toolkit",
   "UniqueID": "Platonymous.Toolkit",
   "EntryDll": "PyTK.dll",
-  "MinimumApiVersion": "2.8-beta",
+  "MinimumApiVersion": "2.8",
   "UpdateKeys": [ "Nexus:1726" ]
 }
