--- a/SplitMoney/manifest.json
+++ b/SplitMoney/manifest.json
@@ -1,15 +1,16 @@
 {
   "Name": "SplitMoney",
   "Author": "Platonymous",
-  "Version": "1.1.2",
+  "Version": "1.2.1",
   "Description": "Seperates the money in multiplayer",
   "UniqueID": "Platonymous.SplitMoney",
   "EntryDll": "SplitMoney.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.8",
   "UpdateKeys": [ "Nexus:2303" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.Toolkit"
+      "UniqueID": "Platonymous.Toolkit",
+      "MinimumVersion": "1.4.22"
     }
   ]
 }
