--- a/CFAutomate/manifest.json
+++ b/CFAutomate/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Custom Farming Automate Bridge",
   "Author": "Platonymous",
-  "Version": "2.12.9",
+  "Version": "2.12.10-unofficial.1-minervamaga",
   "Description": "Allows Custom Farming to work with Automate",
   "UniqueID": "Platonymous.CFAutomate",
   "EntryDll": "CFAutomate.dll",
