--- a/PyTK/manifest.json
+++ b/PyTK/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "PyTK",
   "Author": "Platonymous",
-  "Version": "1.12.16-unofficial.1-minervamaga",
+  "Version": "1.12.15",
   "Description": "Platonymous Toolkit",
   "UniqueID": "Platonymous.Toolkit",
   "EntryDll": "PyTK.dll",
