--- a/PlatoWarpMenu/PlatoWarpMenu.csproj
+++ b/PlatoWarpMenu/PlatoWarpMenu.csproj
@@ -22,5 +22,7 @@
 
   <Import Project="$(SolutionDir)\common.targets" />
 
+  <ProjectExtensions><VisualStudio><UserProperties manifest_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
