--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -20,7 +20,7 @@
 
     <PackageProjectUrl>https://github.com/Platonymous/Stardew-Valley-Mods/blob/master/PyTK/Examples.md</PackageProjectUrl>
 
-    <PackageIcon>pytk-nuget-icon.png</PackageIcon>
+    <PackageIcon>pytk-icon.png</PackageIcon>
 
     <PackageIconUrl />
 
@@ -38,11 +38,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.13.4" />
+    <PackageReference Include="DotNetZip" Version="1.13.5" />
     <PackageReference Include="MoonSharp" Version="2.0.0.0" />
     <PackageReference Include="ncalc" Version="1.3.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.0.0" />
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
     <PackageReference Include="Platonymous.TMXTile" Version="1.0.2" />
   </ItemGroup>
 
@@ -51,7 +51,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-    <None Include="pytk-nuget-icon.png">
+    <None Include="pytk-icon.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
