--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "TMXL Map Toolkit",
   "Author": "Platonymous",
-  "Version": "1.10.28",
+  "Version": "1.10.28-preview",
   "Description": "Load TMX Maps into the Game",
   "UniqueID": "Platonymous.TMXLoader",
   "EntryDll": "TMXLoader.dll",
