--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -43,7 +43,13 @@
     <PackageReference Include="ncalc" Version="1.3.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.1.0" />
-    <PackageReference Include="Platonymous.TMXTile" Version="1.3.4" />
+  </ItemGroup>
+  
+  <ItemGroup>
+  <Reference Include="TMXTile">
+    <HintPath>$(GamePath)\smapi-internal\TMXTile.dll</HintPath>
+    <Private>False</Private>
+  </Reference>
   </ItemGroup>
 
   <ItemGroup>
