--- a/PyTK/manifest.json
+++ b/PyTK/manifest.json
@@ -1,11 +1,11 @@
 {
   "Name": "PyTK",
   "Author": "Platonymous",
-  "Version": "1.13.19-preview",
+  "Version": "1.13.20",
   "Description": "Platonymous Toolkit",
   "UniqueID": "Platonymous.Toolkit",
   "EntryDll": "PyTK.dll",
-  "MinimumApiVersion": "3.2.0",
+  "MinimumApiVersion": "3.4.0",
   "UpdateKeys": [ "Nexus:1726" ],
   "Dependencies": [
     {
