--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -1,16 +1,16 @@
 {
   "Name": "TMXL Map Toolkit",
   "Author": "Platonymous",
-  "Version": "1.10.32-preview",
+  "Version": "1.10.34",
   "Description": "Load TMX Maps into the Game",
   "UniqueID": "Platonymous.TMXLoader",
   "EntryDll": "TMXLoader.dll",
   "UpdateKeys": [ "Nexus:1820" ],
-  "MinimumApiVersion": "3.2.0",
+  "MinimumApiVersion": "3.4.0",
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit",
-      "MinimumVersion": "1.13.3"
+      "MinimumVersion": "1.13.20"
     }
   ]
 }
